--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "my-example-autho",
+  "name": "react-express",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "ts-node ./src/server.ts",
-    "server-start": "ts-node ./src/server.ts",
-    "server-dev": "nodemon",
-    "react-dev": "cd react-app && npm start",
-    "react-build": "cd react-app && npm install && npm run build"
+    "watch": "ts-node ./src/server.ts"
   },
   "keywords": [],
   "author": "",
